# winplus

./: .gitignore  CMakeLists.txt  Config.cmake.in  String design.txt  WordsLib definition.txt  readme.md  winplus.dsw  winplus.sln
GuiTest/: GuiTest.cpp  GuiTest.dsp  GuiTest.h  GuiTest.rc  GuiTest.vcxproj  GuiTest.vcxproj.filters  GuiTestDlg.cpp  GuiTestDlg.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
GuiTest/res/: GuiTest.manifest  GuiTest.rc2
examples/: examples.dsp  examples.idc  examples.rc  examples.vcxproj  examples.vcxproj.filters  resource.h  sample-1.cpp  sample-2.cpp  sample-3.cpp  sample-4.cpp  sample-5.cpp  sample-6.cpp  sample_notification.cpp
include/: compoundfile.hpp  console.hpp  definitions.hpp  graphics.hpp  ini.hpp  md5.hpp  picture.hpp  resource.hpp  shell.hpp  strings.hpp  system.hpp  time.hpp  winctrl.hpp  winplus.hpp  winplus_compoundfile.hpp  winplus_graphics.hpp  winplus_picture.hpp  winplus_resource.hpp  winplus_system.hpp  winplus_winctrl.hpp  wordslib.hpp
projects/: DynamicLib.dsp  DynamicLib.vcxproj.filters  StaticLib.dsp  StaticLib.vcxproj.filters  winplus-dll.vcxproj  winplus-dll.vcxproj.filters  winplus-lib.vcxproj  winplus-lib.vcxproj.filters
src/: compoundfile.cpp  console.cpp  definitions.cpp  graphics.cpp  ini.cpp  md5.cpp  picture.cpp  resource.cpp  shell.cpp  strings.cpp  system.cpp  time.cpp  winctrl.cpp  winplus.def  winplus_compoundfile.cpp  winplus_console.cpp  winplus_graphics.cpp  winplus_ini.cpp  winplus_picture.cpp  winplus_resource.cpp  winplus_strings.cpp  winplus_system.cpp  winplus_winctrl.cpp  winplus_wordslib.cpp  wordslib.cpp
tests/: test_main.cpp  tests.vcxproj
